--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
-python-telegram-bot; python_version >= '3'
-coloredlogs
+# Python compatibility
 PySocks
-python-telegram-bot==12.6.1; python_version < '3'
 configparser; python_version < '3'
 win_inet_pton; python_version < '3' and sys_platform == 'win32'
+
+# Robots
 requests
-werkzeug
+
+# Telegram support
+python-telegram-bot; python_version >= '3'
+python-telegram-bot==13.0; python_version < '3'
 tomli
 tomli-w
+
+# Logging
+coloredlogs
